# cmake-novice

./: .gitignore  .travis.yml  AUTHORS  CMake-slides.md  README.md  _config.yml  index.md  setup.md
_episodes/: 01-introduction.md  02-HelloWorld using CMake.md  03-Multiple source files.md  04-Dealing with compilers.md  04-coffee.md  05-Dealing with compilers.md  05-Linking libraries.md  05-coffee.md  06-Changing compilers.md  06-Linking libraries.md  07-CTest.md  07-System introspection.md  08-CTest.md
data/exercises/ex1/: CMakeLists.txt  hello_cmake.cpp
data/exercises/ex2/: CMakeLists.txt
data/exercises/ex2/src/: ex2test1.cpp
data/exercises/ex2/src/mul/: mymul.h
data/exercises/ex3/src/add/: myadd.cpp  myadd.h
data/exercises/ex3/src/mul/: mymul.cpp
data/exercises/ex4/: CMakeLists.txt
data/exercises/ex4/src/: ex2test1.cpp  ex2test2.cpp
data/exercises/ex4/src/add/: myadd.h
data/exercises/ex4/src/mul/: mymul.h
files/: build.gv
